--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <title>Advance Todo</title>
+    <title>Todo</title>
   </head>
   <body>
     <div id="root"></div>
